--- a/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
+++ b/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
@@ -126,38 +126,28 @@
 </div>
 
 
-<div
-  class="modal fade"
-  id="mimodal"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
+<div class="modal fade" id="mimodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content border-success">
+      
       <div class="modal-header bg-success text-white">
         <h5 class="modal-title" id="exampleModalLabel">Confirmación</h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Cerrar"
-          (click)="hideModal()"
-        ></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar" (click)="hideModal()"></button>
       </div>
+
       <div class="modal-body">
         <p>{{ message }}</p>
       </div>
+
       <div class="modal-footer">
-        <button
-          type="button"
-          class="btn btn-success"
-          data-bs-dismiss="modal"
-          (click)="hideModal()"
-        >
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="hideModal()">
           Cerrar
         </button>
+        <button *ngIf="esConfirmacionEliminacion" type="button" class="btn btn-danger" (click)="confirmarEliminacion()">
+          Eliminar
+        </button>
       </div>
+
     </div>
   </div>
 </div>
